chore: delete init version endpoint due to has been moved to dagster assets
